[package]
name = "rust-swapp-be"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version="4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version="6.0.0", features=["actix-web"]}
actix-web = "4.0"
actix-rt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
actix-cors = "0.6"
